fix to margin on mobile coming soon

--- a/src/components/ComingSoon/ComingSoon.sass
+++ b/src/components/ComingSoon/ComingSoon.sass
@@ -72,7 +72,7 @@
     flex-direction: row-reverse
   .comingsoon-text-container
     margin-right: 0
-    margin-left: $spacing-m-desktop
+    margin-left: $relevel-hero-mobile
   .comingsoon-image
     margin-left: -$spacing-xxxl-desktop
 
